syntax = "proto3";

option go_package = "game/generated/pb/game";

message TipInfoMessage
{
  uint32 id = 1;
  repeated string parameters = 2;
}