syntax = "proto3";



message PlayerGameNodeEnteryInfoPBComponent
{
  uint32 centre_node_id = 1;
}
